Добавление "веса" в кнопки и на страницу товара, плавающее меню

--- a/item.html
+++ b/item.html
@@ -60,8 +60,8 @@
 
 		<main class="main-content__layout">
 			<div class="container">
-				<div class="wrap">
-					<div class="tape-header big">
+				<div class="wrap menu-nav-wrap">
+					<div class="tape-header big js-sticky-menu">
 						<div class="menu-nav cleara">
 							<div class="menu-nav__col">
 								<a href="#" class="menu-nav__item">
@@ -132,13 +132,16 @@
 									<div class="ingredients-choice__container">
 										<div class="ingredients-choice__line cleara">
 											<div class="ingredients-choice__col-4">
-												<p>Диаметр  30 см.</p>
+												<p>Диаметр  30 см. 
+													<span class="ingredients-choice-weight">Вес: 800 гр.</span>
+												</p>
 												<input id="rsecond" type="radio" name="radio" checked hidden />
        											<label for="rsecond"><img src="img/icons/mens-2x.png" alt=""></label>
-
 											</div>
 											<div class="ingredients-choice__col-4">
-												<p>Диаметр  40 см.</p>
+												<p>Диаметр  40 см.
+													<span class="ingredients-choice-weight">Вес: 800 гр.</span>
+												</p>
 												<input id="rsecond2" type="radio" name="radio" hidden />
        											<label for="rsecond2"><img src="img/icons/mens-4x.png" alt=""></label>
 											</div>
