--- a/main.html
+++ b/main.html
@@ -95,15 +95,15 @@
 									<p class="catalog__item-title">Пицца “Барбекю”</p>
 									<div class="catalog__item-text">цыпленок и свинина BBQ, грибы, лук, моцарелла </div>
 									<div class="catalog__item-controls cleara">
-										<div class="catalog__item-controls__btn js-item-price" data-price="450,00">средняя 30 см</div>
-										<div class="catalog__item-controls__btn active js-item-price" data-price="560,00">большая 40 см</div>
+										<div class="catalog__item-controls__btn js-item-price" data-price="450,00">средняя 30 см <span class="weight">600 гр.</span></div>
+										<div class="catalog__item-controls__btn active js-item-price" data-price="560,00">большая 40 см <span class="weight">700 гр.</span></div>
 									</div>
 									<div class="catalog__item-footer cleara">
 										<div class="catalog__item-price">560,00 <small>руб.</small></div>
 
 										<div class="catalog__item-cart cart-btn"></div>
 										<div class="counter cleara">
-										    <input type="button" field="quantity" class="qtyplus js-qtyminus" value="-">
+										    <input type="button" field="quantity" class="qtyminus js-qtyminus" value="-">
 										    <input type="text" class="qty" value="0" name="quantity">
 										    <input type="button" field="quantity" class="qtyplus js-qtyplus" value="+">
 									    </div>
@@ -122,7 +122,7 @@
 
 										<div class="catalog__item-cart cart-btn"></div>
 										<div class="counter cleara">
-										    <input type="button" field="quantity" class="qtyplus js-qtyminus" value="-">
+										    <input type="button" field="quantity" class="qtyminus js-qtyminus" value="-">
 										    <input type="text" class="qty" value="0" name="quantity">
 										    <input type="button" field="quantity" class="qtyplus js-qtyplus" value="+">
 									    </div>
@@ -141,7 +141,7 @@
 
 										<div class="catalog__item-cart cart-btn"></div>
 										<div class="counter cleara">
-										    <input type="button" field="quantity" class="qtyplus js-qtyminus" value="-">
+										    <input type="button" field="quantity" class="qtyminus js-qtyminus" value="-">
 										    <input type="text" class="qty" value="0" name="quantity">
 										    <input type="button" field="quantity" class="qtyplus js-qtyplus" value="+">
 									    </div>
@@ -160,7 +160,7 @@
 
 										<div class="catalog__item-cart cart-btn"></div>
 										<div class="counter cleara">
-										    <input type="button" field="quantity" class="qtyplus js-qtyminus" value="-">
+										    <input type="button" field="quantity" class="qtyminus js-qtyminus" value="-">
 										    <input type="text" class="qty" value="0" name="quantity">
 										    <input type="button" field="quantity" class="qtyplus js-qtyplus" value="+">
 									    </div>
@@ -179,7 +179,7 @@
 
 										<div class="catalog__item-cart cart-btn"></div>
 										<div class="counter cleara">
-										    <input type="button" field="quantity" class="qtyplus js-qtyminus" value="-">
+										    <input type="button" field="quantity" class="qtyminus js-qtyminus" value="-">
 										    <input type="text" class="qty" value="0" name="quantity">
 										    <input type="button" field="quantity" class="qtyplus js-qtyplus" value="+">
 									    </div>
@@ -198,7 +198,7 @@
 
 										<div class="catalog__item-cart cart-btn"></div>
 										<div class="counter cleara">
-										    <input type="button" field="quantity" class="qtyplus js-qtyminus" value="-">
+										    <input type="button" field="quantity" class="qtyminus js-qtyminus" value="-">
 										    <input type="text" class="qty" value="0" name="quantity">
 										    <input type="button" field="quantity" class="qtyplus js-qtyplus" value="+">
 									    </div>
