новый пункт меню с картинками

--- a/item.html
+++ b/item.html
@@ -87,6 +87,12 @@
 									<span>Комбо-наборы</span>
 								</a>
 							</div>
+							<div class="menu-nav__col">
+								<a href="#" class="menu-nav__item new">
+									<img src="img/userfile/pizza2.png" alt="">
+									<span>Полметра счаcтья</span>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
